[tool.poetry]
name = "dsalib"
version = "0.1.0"
description = "A basic library for Data Structure and Algorithms"
authors = ["Francesco Parisio <francesco.parisio@protonmail.com>"]

[tool.poetry.dependencies]
python = "~3.8.1"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pylint = "^2.17.2"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
